2006-03-12  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* ly/engraver-init.ly: init rehearsalMarkAlignSymbol to staff-bar.

2006-03-12  Mats Bengtsson  <mabe@drongo.s3.kth.se>

	* Documentation/user/instrument-notation.itely (Setting simple
	songs): Added \book{...} around the full example, so the separate
	markups are included in the printed example. 

2006-03-12  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* scripts/lilypond-book.py (get_latex_textwidth): explicitly close
	tmphandle.

	* python/lilylib.py (system): rewrite system() using
	subprocess. Remove >& redirection trickery.

2006-03-11  Graham Percival  <gpermus@gmail.com>

	* Documentation/user/ changing-defaults, global, scheme-tutorial,
	notation-appendices.itely: minor fixes from mailist.

2006-03-11  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* Documentation/user/GNUmakefile ($(outdir)/lilypond.html):
	unsplit man also needs images.

	* tex/texinfo.tex (sectionheading, q.v.): relax after \char'15.

	* VERSION (PACKAGE_NAME): 2.7.38 released.

2006-03-10  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* scripts/lilypond-book.py (get_latex_textwidth): look for latex
	log in output dir.

2006-03-08  Johannes Schindelin  <Johannes.Schindelin@gmx.de>

	* lily/audio-column.cc, lily/score-performer.cc: MIDI output now
	respects the Score.skipTypesetting property.
	
2006-03-09  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* scm/framework-ps.scm (ps-embed-cff): no Setup section in
	Prolog. No %%EOF after CFF file.

2006-03-08  Joe Neeman  <joeneeman@gmail.com>
	
	* lily/constrained-breaking.cc (get_max_systems): used to return a
	much too big value
	(combine_demerits): use pointers to reduce copying data
	(calc_subproblem): idem
	(get_page_penalty): add page turn penalties
	
2006-03-09  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* Documentation/user/invoking.itely (Invoking lilypond): better
	explanation of -e usage.

	* lily/main.cc (main_with_guile): don't append to
	init_scheme_code_string
